Bump Java version to 21 to 25 (#287)